Updated for new PVATrajectoryStamped msg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   cmake_modules
+  app_pathplanner_interface
 )
 
 add_message_files(DIRECTORY msg FILES
@@ -34,7 +35,7 @@ catkin_package(
 	DEPENDS Eigen
   INCLUDE_DIRS include
   LIBRARIES waypointControl
-  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp std_msgs visualization_msgs #waypoint_control
+  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp std_msgs visualization_msgs app_pathplanner_interface
   DEPENDS system_lib
 )
 
