--- a/package.xml
+++ b/package.xml
@@ -26,6 +26,7 @@
   <build_depend>visualization_msgs</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>app_pathplanner_interface</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>mavros_msgs</run_depend>
@@ -35,6 +36,7 @@
   <run_depend>visualization_msgs</run_depend>
   <run_depend>cmake_modules</run_depend> 
   <run_depend>message_runtime</run_depend>
+  <run_depend>app_pathplanner_interface</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
