cleanup for snapdragon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(waypoint_control)
 
-set(CMAKE_CXX_FLAGS "-std=c++14 ${CMAKE_CXX_FLAGS} -Wno-format-security -Wno-literal-suffix -DCATKIN_BUILD")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-format-security -Wno-literal-suffix -DCATKIN_BUILD")
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -21,18 +21,6 @@ find_package(catkin REQUIRED COMPONENTS
 find_package(Eigen REQUIRED
 	px4_control)
 
-# Add custom message files
-add_message_files(DIRECTORY msg FILES
-	 PVA.msg
- )
-
-# Generate the message cpp files
-generate_messages( DEPENDENCIES
-	std_msgs
-	geometry_msgs
-	nav_msgs
-)
-
 catkin_package(
 	DEPENDS Eigen
 	INCLUDE_DIRS include
@@ -48,13 +36,11 @@ include_directories(
 )
 
 # Glob all of the source files together
-file(GLOB_RECURSE SRC_FILES src/ *.cpp)
-
-add_executable(waypoint_control ${SRC_FILES})
+add_executable(waypoint_control src/main.cpp src/waypoint_control.cpp)
 
 target_link_libraries(waypoint_control ${catkin_LIBRARIES})
 
 #This makes sure that messages and services are compiled before the rest
-add_dependencies(waypoint_control waypoint_control_generate_messages_cpp)
+add_dependencies(waypoint_control mg_msgs_generate_messages_cpp)
 add_dependencies(waypoint_control ${catkin_EXPORTED_TARGETS})
 
