--- a/package.xml
+++ b/package.xml
@@ -26,6 +26,7 @@
   <build_depend>visualization_msgs</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>mg_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>mavros_msgs</run_depend>
